# mlb-stats-rs

./: Cargo.toml
src/: lib.rs
src/game_types/: mod.rs
src/people/: request.rs  response.rs
src/teams/: mod.rs  request.rs  response.rs
